--- a/src/components/CommentItem/index.css
+++ b/src/components/CommentItem/index.css
@@ -1,3 +1,23 @@
+.comment-item {
+  list-style-type: none;
+}
+
+.comment-container {
+  display: flex;
+}
+
+.initial-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  margin-top: 18px;
+  margin-right: 8px;
+  flex-shrink: 0;
+}
+
 .amber {
   background-color: #f59e0b;
 }
@@ -26,92 +46,82 @@
   background-color: #0ea5e9;
 }
 
-.comment-item {
-  border-bottom: 1px solid #7e858e;
-  list-style-type: none;
-  padding-right: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.comment-container {
-  display: flex;
-}
-
-.user-icon {
+.initial {
   color: #ffffff;
   font-family: 'Roboto';
-  font-size: 18px;
-  height: 40px;
-  width: 40px;
-  border-radius: 24px;
-  padding-top: 10px;
-  padding-left: 14px;
-}
-
-.letter-icon {
+  font-size: 16px;
   margin: 0;
 }
 
-.comment-details {
-  margin-left: 10px;
-}
-
-.commented-time {
+.username-time-container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 12px;
 }
 
-.commented-user {
+.username {
   color: #334155;
   font-family: 'Roboto';
-  font-size: 18px;
-  font-weight: bold;
-  margin: 0;
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .time {
   color: #94a3b8;
   font-family: 'Roboto';
-  font-size: 16px;
-  font-weight: 500;
-  margin-left: 20px;
-}
-
-.comment-content {
-  color: #64748b;
-  font-family: 'Roboto';
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.features-container {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.features-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  outline: none;
-  padding: 0;
-  height: 40px;
-  width: 40px;
-}
-
-.features-img {
-  height: 40px;
-  width: 40px;
-}
-
-.like-txt {
+  font-size: 12px;
+  margin-left: 18px;
   margin-top: 0;
   margin-bottom: 0;
-  margin-left: 10px;
 }
 
-.delete-mrg {
-  justify-self: flex-end;
+.comment {
+  color: #64748b;
+  font-family: 'Roboto';
+  font-size: 14px;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.like-container {
+  display: flex;
+  align-items: center;
+}
+
+.button {
+  background-color: transparent;
+  color: #7e858e;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.like-image {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
+
+.active {
+  color: #0ea5e9;
+}
+
+.delete {
+  height: 20px;
+  width: 20px;
+}
+
+.comment-line {
+  width: 100%;
+  border: 1px solid #dee0e3;
 }
