--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -1,98 +1,163 @@
 .app-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  margin-top: 48px;
 }
 
-.content-container {
+@media screen and (min-width: 768px) {
+  .app-container {
+    margin-top: 96px;
+  }
+}
+
+.comments-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
   width: 90%;
+  max-width: 550px;
 }
 
-.comment-img {
-  height: 150px;
+@media screen and (min-width: 768px) {
+  .comments-container {
+    width: 80%;
+    max-width: 1140px;
+  }
 }
 
-.form-container {
+.line {
+  border: 1px solid #dee0e3;
+  width: 100%;
+  margin-top: 16px;
+}
+
+.comments-inputs {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  font-family: 'Roboto';
+  justify-content: space-between;
+  align-items: center;
 }
 
-.label {
+@media screen and (min-width: 768px) {
+  .comments-inputs {
+    flex-direction: row;
+  }
+}
+
+.app-heading {
+  color: #1e293b;
+  font-family: 'Roboto';
+  font-size: 48px;
+  margin-bottom: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .app-heading {
+    font-size: 56px;
+    margin-top: 0px;
+    margin-bottom: 24px;
+  }
+}
+
+.form-description {
   color: #475569;
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 24px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  order: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .form {
+    width: 28%;
+    min-width: 300px;
+    order: 0;
+  }
 }
 
 .name-input {
-  color: #475569;
+  font-family: 'Roboto';
   font-size: 16px;
-  font-weight: bold;
-  border: 1px solid #cbd2d9;
-  border-radius: 5px;
-  padding: 14px 20px 14px 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  outline: none;
   height: 40px;
-  width: 100%;
+  border: 1px solid #cbd2d9;
+  border-radius: 4px;
+  margin-bottom: 12px;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  outline: none;
 }
 
 .comment-input {
-  color: #475569;
+  font-family: 'Roboto';
   font-size: 16px;
-  font-weight: bold;
   border: 1px solid #cbd2d9;
-  border-radius: 5px;
-  padding: 14px 20px 14px 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border-radius: 4px;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   outline: none;
-  width: 100%;
 }
 
-.add-comment-btn {
-  border: none;
-  border-radius: 5px;
-  color: #ffffff;
-  font-size: 16px;
+.add-button {
   background-color: #0284c7;
-  padding: 4px 10px 4px 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  cursor: pointer;
+  color: #ffffff;
+  font-size: 14px;
+  font-family: 'Roboto';
+  border-radius: 4px;
+  border: none;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 16px;
+  margin-top: 16px;
+  min-width: 60px;
+  align-self: flex-start;
   outline: none;
+  cursor: pointer;
 }
 
-.separation {
-  height: 1px solid #dee0e3;
-  width: 100%;
+.image {
+  width: 280px;
+  height: 200px;
+}
+
+@media screen and (min-width: 768px) {
+  .image {
+    width: 380px;
+    height: 300px;
+  }
+}
+
+.heading {
+  color: #475569;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+  margin-left: 8px;
 }
 
 .comments-count {
-  color: #475569;
-  font-size: 16px;
-  font-weight: 500;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.count {
+  text-align: center;
   color: #ffffff;
   background-color: #0284c7;
-  border-radius: 8px;
-  padding: 8px 14px 8px 14px;
+  font-size: 12px;
+  font-family: 'Roboto';
+  border-radius: 4px;
+  padding-left: 8px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+  margin-right: 4px;
 }
 
 .comments-list {
   padding-left: 0;
-  width: 100%;
+  margin-top: 0;
 }
